# file-organizer

face_detection/: meson.build
face_detection/src/: main.cpp
file_organizer/: meson.build
file_organizer/src/: file_organizer.cpp
